--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,11 @@ jobs:
         - POSTGRES_DB=circle_test
     steps:
       - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
-          command: npm install --quiet
+          command: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
