--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
-          command: npm install
+          command: npm install --quiet
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
