--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,3 +34,13 @@ jobs:
       - run:
           name: test
           command: npm run test:server 
+
+      # Deploy production
+      - deploy:
+          name: Deploy to Azure if tests pass and branch is Master
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ];
+              then ./scripts/publish.sh production;
+            else
+              echo "Not master branch so not deploying"
+            fi
