more CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - add-ssh-keys:
           fingerprints:
-            - "bd:ed:31:6f:b6:ef:a8:b2:13:74:94:62:f8:d7:a1:d8"
+            - "SO:ME:FIN:G:ER:PR:IN:T"
 
       - checkout
 
