--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           name: Deploy to Azure if tests pass and branch is Master
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ];
-              then /scripts/publish.sh production;
+              then ./../scripts/publish.sh production;
             else
               echo "Not on master branch so not deploying"
             fi
