updating web.config

--- a/web.config
+++ b/web.config
@@ -5,13 +5,13 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="server/start.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="dist/index.html" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
         <rule name="myapp">
           <match url="/*" />
-          <action type="Rewrite" url="server/start.js" />
+          <action type="Rewrite" url="dist/index.html" />
         </rule>
       </rules>
     </rewrite>
