--- a/web.config
+++ b/web.config
@@ -1,19 +1,18 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <system.web>
-    <compilation batch="false" />
-  </system.web>
-  <system.webServer>
-    <handlers>
-      <add name="iisnode" path="dist/index.html" verb="*" modules="iisnode" />
-    </handlers>
-    <rewrite>
-      <rules>
-        <rule name="myapp">
-          <match url="/*" />
-          <action type="Rewrite" url="dist/index.html" />
-        </rule>
-      </rules>
-    </rewrite>
-  </system.webServer>
+    <system.webServer>         
+      <handlers>
+           <add name="iisnode" path="server/start.js" verb="*" modules="iisnode"/>
+     </handlers>
+      <rewrite>
+           <rules>
+                <rule name="DynamicContent">
+                     <conditions>
+                          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+                     </conditions>
+                     <action type="Rewrite" url="server/start.js"/>
+                </rule>
+           </rules>
+      </rewrite>
+    </system.webServer>
 </configuration>
