first commit for adding Azure application insights

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "accounting": "0.4.1",
     "animate.css": "3.5.2",
+    "applicationinsights": "0.22.0",
     "axios": "0.16.1",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
