--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lodash.isstring": "4.0.1",
     "mailcomposer": "4.0.0",
     "mailgun-js": "0.7.15",
+    "moment": "2.18.1",
     "node-sass": "4.5.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "path": "0.12.7",
