--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "unit": "cross-env BABEL_ENV=test karma start test/client/unit/karma.conf.js --single-run",
     "e2e": "node test/client/e2e/runner.js",
     "test:client": "npm run unit && npm run e2e",
-    "test:server": "lab -a code -v --leaks test/server",
-    "test2": "npm run test:client && npm run test:server",
+    "test:server": "NODE_ENV=test lab -a code -v --leaks test/server",
+    "test2": "NODE_ENV=test npm run test:client && npm run test:server",
     "knex:migrate-seed": "node --require dotenv/config build/db_migrate_seed",
     "knex:migrate": "node --require dotenv/config ./node_modules/knex/bin/cli.js migrate:latest",
     "knex:seed": "node --require dotenv/config ./node_modules/knex/bin/cli.js seed:run"
