--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run:
           name: Install Dependencies
-          command: npm install --quiet
+          command: npm install
 
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
