--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "css-loader": "0.26.1",
     "dotenv": "4.0.0",
     "element-ui": "1.4.6",
-    "email-templates": "2.5.4",
     "es6-promise": "4.1.0",
     "eslint": "3.14.1",
     "eslint-config-standard": "6.2.1",
@@ -71,8 +70,7 @@
     "file-loader": "0.10.0",
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
-    "handlebars": "4.0.6",
-    "hapi": "16.1.1",
+    "hapi": "16.6.2",
     "hapi-auth-jwt2": "7.2.4",
     "hapi-bookshelf-models": "2.0.0",
     "hoek": "4.1.1",
@@ -90,12 +88,13 @@
     "lodash.isobject": "3.0.2",
     "lodash.isstring": "4.0.1",
     "mailcomposer": "4.0.0",
-    "mailgun-js": "0.7.15",
+    "mailgun-js": "0.13.1",
     "moment": "2.18.1",
     "node-sass": "4.5.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "path": "0.12.7",
     "pg": "6.1.2",
+    "pug": "2.0.0-rc.4",
     "query-string": "4.3.4",
     "rimraf": "2.6.0",
     "sass-loader": "6.0.3",
