--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "file-loader": "0.10.0",
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
+    "handlebars": "4.0.10",
     "hapi": "16.6.2",
     "hapi-auth-jwt2": "7.2.4",
     "hapi-bookshelf-models": "2.0.0",
