--- a/.travis.yml
+++ b/.travis.yml
@@ -12,18 +12,22 @@ services:
 
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
-  - export NODE_ENV=production
-  - nanobox run npm install
+  # - nanobox run npm install
+  - npm install
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
-  - nanobox run npm run knex:migrate
-  - nanobox run npm run knex:seed
-  - nanobox run npm run build
+  - npm run knex:migrate
+  - npm run knex:seed
+  # - nanobox run npm run knex:migrate
+  # - nanobox run npm run knex:seed
+  #- nanobox run npm run build
 
-script: nanobox run npm run test:server
+# script: nanobox run npm run test:server
+script: npm run test:server
 
 after_success:
+  #- export NODE_ENV=production
   - nanobox remote add gmnst-prod
   - nanobox deploy
 
