--- a/.travis.yml
+++ b/.travis.yml
@@ -7,43 +7,21 @@ sudo: required
 node_js:
   - "6"
 
-services:
-  - postgresql
-
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
-  # - nanobox run npm install
-  - npm install
+  - nanobox evar add NODE_ENV=production
+  - nanobox run npm install
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-  - npm run knex:migrate
-  - npm run knex:seed
-  # - nanobox run npm run knex:migrate
-  # - nanobox run npm run knex:seed
-  #- nanobox run npm run build
+  - nanobox run npm run knex:migrate
+  - nanobox run npm run knex:seed
+  - nanobox run npm run build
 
-# script: nanobox run npm run test:server
-script: npm run test:server
+script: nanobox run npm run test:server
 
 after_success:
-  #- export NODE_ENV=production
   - nanobox remote add gmnst-prod
   - nanobox deploy
-
-# https://github.com/travis-ci/travis-ci/issues/4771
-env:
-  - CXX=g++-4.8
-
-# https://github.com/travis-ci/travis-ci/issues/4771
-addons:
-  postgresql: "9.6"
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.8
-    - g++-4.8
 
 notifications:
   email: true
