--- a/.travis.yml
+++ b/.travis.yml
@@ -14,27 +14,29 @@ install:
 
 script: 
   - echo $ADMIN_EMAIL
-  - nanobox evar add DATA_DB_NAME=$DATA_DB_NAME
-  - nanobox evar add ADMIN_EMAIL=$ADMIN_EMAIL
-  - nanobox evar add BRAINTREE_ENVIRONMENT=$BRAINTREE_ENVIRONMENT
-  - nanobox evar add BRAINTREE_MERCHANT_ID=$BRAINTREE_MERCHANT_ID
-  - nanobox evar add BRAINTREE_PRIVATE_KEY=$BRAINTREE_PRIVATE_KEY 
-  - nanobox evar add BRAINTREE_PUBLIC_KEY=$BRAINTREE_PUBLIC_KEY
-  - nanobox evar add CART_TOKEN_SECRET=$CART_TOKEN_SECRET
-  - nanobox evar add EMAIL_FROM_CART_SUCCESS=$EMAIL_FROM_CART_SUCCESS
-  - nanobox evar add EMAIL_FROM_CART_SUCCESS_NAME=$EMAIL_FROM_CART_SUCCESS_NAME
-  - nanobox evar add JWT_CLIENT_ID=$JWT_CLIENT_ID
-  - nanobox evar add JWT_SERVER_SECRET=$JWT_SERVER_SECRET
-  - nanobox evar add MAILGUN_API_KEY=$MAILGUN_API_KEY
-  - nanobox evar add MAILGUN_DOMAIN=$MAILGUN_DOMAIN
-  - nanobox evar add MAILGUN_DOMAIN_PROD=$MAILGUN_DOMAIN_PROD
-  - nanobox evar add SHIPENGINE_API_KEY_PROD=$SHIPENGINE_API_KEY_PROD
-  - nanobox evar add SHIPENGINE_CARRIER_ID_FEDEX=$SHIPENGINE_CARRIER_ID_FEDEX
-  - nanobox evar add SHIPPING_FLAT_COST=$SHIPPING_FLAT_COST
-  - nanobox evar add TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
+  - nanobox evar add local DATA_DB_NAME=$DATA_DB_NAME
+  - nanobox evar add local ADMIN_EMAIL=$ADMIN_EMAIL
+  - nanobox evar add local BRAINTREE_ENVIRONMENT=$BRAINTREE_ENVIRONMENT
+  - nanobox evar add local BRAINTREE_MERCHANT_ID=$BRAINTREE_MERCHANT_ID
+  - nanobox evar add local BRAINTREE_PRIVATE_KEY=$BRAINTREE_PRIVATE_KEY 
+  - nanobox evar add local BRAINTREE_PUBLIC_KEY=$BRAINTREE_PUBLIC_KEY
+  - nanobox evar add local CART_TOKEN_SECRET=$CART_TOKEN_SECRET
+  - nanobox evar add local EMAIL_FROM_CART_SUCCESS=$EMAIL_FROM_CART_SUCCESS
+  - nanobox evar add local EMAIL_FROM_CART_SUCCESS_NAME=$EMAIL_FROM_CART_SUCCESS_NAME
+  - nanobox evar add local JWT_CLIENT_ID=$JWT_CLIENT_ID
+  - nanobox evar add local JWT_SERVER_SECRET=$JWT_SERVER_SECRET
+  - nanobox evar add local MAILGUN_API_KEY=$MAILGUN_API_KEY
+  - nanobox evar add local MAILGUN_DOMAIN=$MAILGUN_DOMAIN
+  - nanobox evar add local MAILGUN_DOMAIN_PROD=$MAILGUN_DOMAIN_PROD
+  - nanobox evar add local SHIPENGINE_API_KEY_PROD=$SHIPENGINE_API_KEY_PROD
+  - nanobox evar add local SHIPENGINE_CARRIER_ID_FEDEX=$SHIPENGINE_CARRIER_ID_FEDEX
+  - nanobox evar add local SHIPPING_FLAT_COST=$SHIPPING_FLAT_COST
+  - nanobox evar add local TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
+  - nanobox run npm run build
+
+after_script:
   - nanobox run npm run knex:migrate
   - nanobox run npm run knex:seed
-  - nanobox run npm run build
   - nanobox run npm run test:server
 
 after_success:
