--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
   - nanobox evar add local SHIPPING_FLAT_COST=$SHIPPING_FLAT_COST
   - nanobox evar add local TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
   - echo "====== Environment variables ======"
-  - nanobox run evar ls local
+  - nanobox evar ls local
   - nanobox run npm run build
   - nanobox run npm run knex:migrate
   - nanobox run npm run knex:seed
