--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,5 @@ notifications:
     recipients:
       - gregbruins@gmail.com
     # always|never|change - change is when the repo status goes from pass to fail or vice versa
-    on_success: always
-    on_failure: always
+    on_success: change
+    on_failure: change
