removing build step from travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - nanobox evar add local SHIPPING_FLAT_COST=$SHIPPING_FLAT_COST
   - nanobox evar add local TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
   - nanobox run npm install
-  - nanobox run npm run build
+  # - nanobox run npm run build
   - nanobox run npm run knex:migrate
   - nanobox run npm run knex:seed
 
