--- a/boxfile.yml
+++ b/boxfile.yml
@@ -1,9 +1,9 @@
 run.config:
   engine: nodejs
-  engine.config:
-    runtime: nodejs-7.10
-    dep_manager: npm
-    python_version: python-2.7
+  # engine.config:
+  #   runtime: nodejs-7.10
+    # dep_manager: npm
+    # python_version: python-2.7
 
   # add nginx package
   extra_packages:
