--- a/boxfile.yml
+++ b/boxfile.yml
@@ -1,8 +1,8 @@
 run.config:
   engine: nodejs
-  # engine.config:
-  #   runtime: nodejs-7.10
-    # dep_manager: npm
+  engine.config:
+    runtime: nodejs-7.10
+    dep_manager: npm
     # python_version: python-2.7
 
   # add nginx package
