--- a/boxfile.yml
+++ b/boxfile.yml
@@ -2,7 +2,7 @@ run.config:
   engine: nodejs
   engine.config:
     runtime: nodejs-7.10
-    dep_manager: npm
+    # dep_manager: npm
     # python_version: python-2.7
 
   # add nginx package
