--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
   - nanobox evar add local TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
   - nanobox run npm install
   - nanobox run npm run build
+
+before_script:
   - nanobox run npm run knex:migrate
   - nanobox run npm run knex:seed
 
