updating nginx.conf

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -30,7 +30,7 @@ http {
         # Listen on port 8080
         listen 8080;
 
-        root /app/src;
+        root /app/dist;
 
         try_files $uri/index.html $uri @hapi;
 
