updating nginx.conf

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -19,20 +19,31 @@ http {
                       application/x-javascript
                       application/atom+xml;
 
-    # Proxy upstream to the puma process
+    # Proxy upstream to the hapi process
     upstream hapi {
         server 127.0.0.1:3000;
     }
 
     # Configuration for Nginx
     server {
-
-        # Listen on port 8080
         listen 8080;
-
         root /app/dist;
 
+        # proxy_set_header Host $http_host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
         try_files $uri/index.html $uri @hapi;
+
+        location /api/ {
+            proxy_pass "http://127.0.0.1:3000/api/";
+        }
+
+        location /static/ {
+            expires max;
+            log_not_found off;
+            proxy_pass "http://127.0.0.1:3000/static/";
+        }
 
         # Proxy connections to hapi
         location @hapi {
