--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -7,6 +7,7 @@ events {
 
 http {
     sendfile on;
+    include mime.types;
 
     gzip              on;
     gzip_http_version 1.0;
@@ -29,17 +30,14 @@ http {
         listen 8080;
         root /app/dist;
 
-        # proxy_set_header Host $http_host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # try_files $uri/index.html $uri @hapi =404;
+        try_files $uri index.html =404;
 
-        try_files $uri/index.html $uri @hapi;
-
-        location /api/ {
+        location /api {
             proxy_pass "http://127.0.0.1:3000/api/";
         }
 
-        location /static/ {
+        location /static {
             expires max;
             log_not_found off;
             proxy_pass "http://127.0.0.1:3000/static/";
