--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -30,14 +30,13 @@ http {
         listen 8080;
         root /app/dist;
 
-        # try_files $uri/index.html $uri @hapi =404;
-        try_files $uri index.html =404;
+        try_files $uri/index.html $uri @hapi =404;
 
-        location /api {
+        location /api/ {
             proxy_pass "http://127.0.0.1:3000/api/";
         }
 
-        location /static {
+        location /static/ {
             expires max;
             log_not_found off;
             proxy_pass "http://127.0.0.1:3000/static/";
