--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -7,7 +7,7 @@ events {
 
 http {
     sendfile on;
-    include mime.types;
+    include ../data/etc/nginx/mime.types;
 
     gzip              on;
     gzip_http_version 1.0;
