--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,7 @@ install:
   - nanobox evar add TAX_RATE_CALIFORNIA=$TAX_RATE_CALIFORNIA
 
   # Needed for prod only
+  - nanobox evar add APPINSIGHTS_INSTRUMENTATIONKEY=$APPINSIGHTS_INSTRUMENTATIONKEY
   - nanobox evar add SHIPPING_ADDRESS_FROM_ADDRESS1=$SHIPPING_ADDRESS_FROM_ADDRESS1
   - nanobox evar add SHIPPING_ADDRESS_FROM_CITY=$SHIPPING_ADDRESS_FROM_CITY
   - nanobox evar add SHIPPING_ADDRESS_FROM_COUNTRY_CODE=$SHIPPING_ADDRESS_FROM_COUNTRY_CODE
