--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -42,11 +42,17 @@ http {
             proxy_pass "http://127.0.0.1:3000/static/";
         }
 
-        # Proxy connections to hapi
-        location @hapi {
-            proxy_pass         http://hapi;
-            proxy_redirect     off;
+        # to match all the requests from the cms
+        location / {
+            proxy_pass http://127.0.0.1:3000/;
             proxy_set_header   Host $host;
         }
+
+        # Proxy connections to hapi
+        # location @hapi {
+        #     proxy_pass         http://hapi;
+        #     proxy_redirect     off;
+        #     proxy_set_header   Host $host;
+        # }
     }
 }
