--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "path": "0.12.7",
     "pg": "6.1.2",
+    "promise.prototype.finally": "3.1.0",
     "pug": "2.0.0-rc.4",
     "query-string": "4.3.4",
     "rimraf": "2.6.0",
