--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "crumb": "6.0.3",
     "css-loader": "0.26.1",
     "dotenv": "4.0.0",
-    "element-ui": "2.0.5",
+    "element-ui": "2.0.7",
     "es6-promise": "4.1.0",
     "eslint": "3.14.1",
     "eslint-config-standard": "6.2.1",
@@ -100,6 +100,7 @@
     "semver": "5.3.0",
     "url-loader": "0.5.7",
     "uuid": "3.0.1",
+    "v-img": "0.1.9",
     "vue": "2.5.8",
     "vue-carousel": "0.6.4",
     "vue-i18n": "7.3.1",
