--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
     "not ie <= 8"
   ],
   "engines": {
-    "node": "7.10.1"
+    "node": "7.10.1",
+    "npm": ">=5.6.0"
   },
   "license": "MIT"
 }
