--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ sudo: required
 node_js:
   - "7.10"
 
+cache:
+  directories:
+    - "node_modules"
+
+before_install:
+  - npm i -g npm@5.6.0
+
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
 
