--- a/package.json
+++ b/package.json
@@ -151,8 +151,7 @@
     "not ie <= 8"
   ],
   "engines": {
-    "node": "7.10.1",
-    "npm": ">=5.6.0"
+    "node": "7.10.1"
   },
   "license": "MIT"
 }
