--- a/boxfile.yml
+++ b/boxfile.yml
@@ -1,11 +1,11 @@
 run.config:
-  engine: python
+  engine: nodejs
   engine.config:
-    runtime: python-2.7
+    runtime: nodejs-8.9
 
   extra_packages:
     - nginx
-    - nodejs-8.9
+    - python-2.7
 
   extra_steps:
     - npm install
