--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-merge": "2.6.1",
-    "winston": "2.3.1",
+    "winston": "^2.4.0",
+    "winston-daily-rotate-file": "^1.7.2",
     "wreck": "12.2.2"
   },
   "devDependencies": {
