removing route handlers for static files since static files are now being served by nginx

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -28,6 +28,13 @@ http {
     # Configuration for Nginx
     server {
         listen 8080;
+
+        # turn off directory listing
+        autoindex off; 
+
+        # access_log /app/dist/logs/access.log;
+        # error_log /app/dist/logs/error.log;
+
         root /app/dist;
 
         try_files $uri/index.html $uri @hapi =404;
@@ -37,9 +44,22 @@ http {
         }
 
         location /static/ {
+            try_files $uri =404
             expires max;
+            log_not_found on;
+            # proxy_pass "http://127.0.0.1:3000/static/";
+        }
+
+        location /favicon.ico {
+            root /app/dist/static;
+            try_files $uri =404;
             log_not_found off;
-            proxy_pass "http://127.0.0.1:3000/static/";
+             # disable log messages to prevent clogging the logs:
+            access_log off;
+        }
+
+        location /robots.txt {
+            root /app/dist/static;
         }
 
         # to match all the requests from the cms
