improving checkout flow

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,7 @@ install:
 
   # Needed for prod only
   - nanobox evar add APPINSIGHTS_INSTRUMENTATIONKEY=$APPINSIGHTS_INSTRUMENTATIONKEY
+  - nanobox evar add SHIPENGINE_CARRIER_ID_STAMPSCOM=$SHIPENGINE_CARRIER_ID_STAMPSCOM
   - nanobox evar add SHIPPING_ADDRESS_FROM_ADDRESS1=$SHIPPING_ADDRESS_FROM_ADDRESS1
   - nanobox evar add SHIPPING_ADDRESS_FROM_CITY=$SHIPPING_ADDRESS_FROM_CITY
   - nanobox evar add SHIPPING_ADDRESS_FROM_COUNTRY_CODE=$SHIPPING_ADDRESS_FROM_COUNTRY_CODE
