updating nginx config to forge https

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -25,6 +25,11 @@ http {
         server 127.0.0.1:3000;
     }
 
+    if ($http_x_forwarded_proto != 'https') {
+        rewrite ^ https://$host$request_uri? permanent;
+    }
+
+
     # Configuration for Nginx
     server {
         listen 8080;
