--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -25,28 +25,21 @@ http {
         server 127.0.0.1:3000;
     }
 
-    if ($http_x_forwarded_proto != 'https') {
-        rewrite ^ https://$host$request_uri? permanent;
-    }
-
-
     # Configuration for Nginx
     server {
         listen 8080;
-
-        # turn off directory listing
-        autoindex off; 
+        root /app/dist;
+         # turn off directory listing:
+        autoindex off;
 
         # access_log /app/dist/logs/access.log;
         # error_log /app/dist/logs/error.log;
 
-        root /app/dist;
-
         try_files $uri/index.html $uri @hapi =404;
 
-        location /api/ {
-            proxy_pass "http://127.0.0.1:3000/api/";
-        }
+        # location /api/ {
+        #     proxy_pass "http://127.0.0.1:3000/api/";
+        # }
 
         location /static/ {
             try_files $uri =404
@@ -67,10 +60,23 @@ http {
             root /app/dist/static;
         }
 
-        # to match all the requests from the cms
+        # Our main location to proxy everything else to the upstream
+        # server, but with the added logic for enforcing HTTPS.
         location / {
-            proxy_pass http://127.0.0.1:3000/;
-            proxy_set_header   Host $host;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect off;
+            proxy_next_upstream error;
+
+            if ($http_x_forwarded_proto != 'https') {
+                rewrite ^ https://$host$request_uri? permanent;
+            }
+
+            # proxy_pass http://127.0.0.1:3000/;
+            proxy_pass http://hapi
+
+            # Add HTTP Strict Transport Security for good measure.
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
         }
 
         # Proxy connections to hapi
