nginx.conf - forgot a semicolon

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -73,7 +73,7 @@ http {
             }
 
             # proxy_pass http://127.0.0.1:3000/;
-            proxy_pass http://hapi
+            proxy_pass http://hapi;
 
             # Add HTTP Strict Transport Security for good measure.
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
