--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:server": "NODE_ENV=test lab -a code -v --leaks test/server",
     "test2": "NODE_ENV=test npm run test:client && npm run test:server",
     "knex:migrate": "node ./node_modules/knex/bin/cli.js migrate:latest",
-    "knex:seed": "node ./node_modules/knex/bin/cli.js seed:run"
+    "knex:seed": "node ./node_modules/knex/bin/cli.js seed:run",
+    "postinstall": "node ./node_modules/knex/bin/cli.js migrate:latest"
   },
   "dependencies": {
     "accounting": "0.4.1",
