--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "vue-carousel": "0.6.4",
     "vue-i18n": "7.3.1",
     "vue-loader": "13.5.0",
+    "vue-meta": "^1.4.0",
     "vue-router": "3.0.1",
     "vue-style-loader": "3.0.3",
     "vue-template-compiler": "2.5.8",
