--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "vue-loader": "13.5.0",
     "vue-meta": "^1.4.0",
     "vue-router": "3.0.1",
+    "vue-social-sharing": "2.3.3",
     "vue-style-loader": "3.0.3",
     "vue-template-compiler": "2.5.8",
     "vuelidate": "0.5.0",
