--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -25,6 +25,12 @@ http {
         server 127.0.0.1:3000;
     }
 
+    map $http_user_agent $backend {
+        default hapi;
+        "~*(facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google.*snippet)"
+             http://127.0.0.1:3000/socialbot;
+    }
+
     # Configuration for Nginx
     server {
         listen 8080;
