--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -25,11 +25,6 @@ http {
         server 127.0.0.1:3000;
     }
 
-    map $http_user_agent $backend {
-        default hapi;
-        "~*(facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google.*snippet)"
-             http://127.0.0.1:3000/socialbot;
-    }
 
     # Configuration for Nginx
     server {
@@ -71,6 +66,20 @@ http {
 
             if ($http_x_forwarded_proto != 'https') {
                 rewrite ^ https://$host$request_uri? permanent;
+            }
+
+            #facebook bot?
+            set $prerender 0;
+            if ($http_user_agent ~* "twitterbot|facebookexternalhit|quora link preview|pinterest") {
+                set $prerender 1;
+            }
+
+            if ($prerender = 1) {
+                #setting prerender as a variable forces DNS resolution since nginx caches IPs and doesnt play well with load balancing
+                set $prerender "127.0.0.1:3000/socialbot";
+                rewrite .* /$scheme://$host$request_uri? break;
+                proxy_pass http://$prerender;
+                break;
             }
 
             proxy_pass http://hapi;
