--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -70,14 +70,11 @@ http {
 
             #facebook bot?
             set $prerender 0;
-            if ($http_user_agent ~* "twitterbot|facebookexternalhit|quora link preview|pinterest") {
-                set $prerender 1;
-            }
-
-            if ($prerender = 1) {
+            if ($http_user_agent ~* "facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google.*snippet") {
                 #setting prerender as a variable forces DNS resolution since nginx caches IPs and doesnt play well with load balancing
                 set $prerender "127.0.0.1:3000/socialbot";
-                rewrite .* /$scheme://$host$request_uri? break;
+                #rewrite .* /$scheme://$host$request_uri? break;
+                rewrite .* /$scheme://$host/socialbot? break;
                 proxy_pass http://$prerender;
                 break;
             }
