--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -38,6 +38,12 @@ http {
 
         try_files $uri/index.html $uri @hapi =404;
 
+
+        #testing
+        if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google.*snippet$") {
+           rewrite ^/socialbot$ /$scheme://$host$request_uri? last;
+        }
+
         location /static/ {
             try_files $uri =404
             expires max;
@@ -66,17 +72,6 @@ http {
 
             if ($http_x_forwarded_proto != 'https') {
                 rewrite ^ https://$host$request_uri? permanent;
-            }
-
-            #facebook bot?
-            set $prerender 0;
-            if ($http_user_agent ~* "facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google.*snippet") {
-                #setting prerender as a variable forces DNS resolution since nginx caches IPs and doesnt play well with load balancing
-                set $prerender "127.0.0.1:3000/socialbot";
-                #rewrite .* /$scheme://$host$request_uri? break;
-                rewrite .* /$scheme://$host/socialbot? break;
-                proxy_pass http://$prerender;
-                break;
             }
 
             proxy_pass http://hapi;
