fixing the socialshare view template and lots of associalted code updates

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
     "handlebars": "4.0.10",
-    "hapi": "17.1.1",
+    "hapi": "^16.6.2",
     "hapi-auth-jwt2": "7.2.4",
     "hapi-bookshelf-models": "2.0.0",
     "hoek": "5.0.2",
@@ -99,6 +99,7 @@
     "url-loader": "0.5.7",
     "uuid": "3.0.1",
     "v-img": "0.1.9",
+    "vision": "4.1.1",
     "vue": "2.5.8",
     "vue-carousel": "0.6.4",
     "vue-i18n": "7.3.1",
