--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -56,9 +56,15 @@ http {
             root /app/dist/static;
         }
 
+
+
         # Our main location to proxy everything else to the upstream
         # server, but with the added logic for enforcing HTTPS.
         location / {
+            if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google.*snippet$") {
+                rewrite ^/type/[a-zA-Z0-9_]*/[a-zA-Z0-9_]*$ /product/share?uri=$uri last;
+            }
+
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_redirect off;
