--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -56,18 +56,12 @@ http {
             root /app/dist/static;
         }
 
-
-
         # Our main location to proxy everything else to the upstream
         # server, but with the added logic for enforcing HTTPS.
         location / {
-            if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google.*snippet$") {
-                rewrite ^/type/[a-zA-Z0-9_]*/[a-zA-Z0-9_]*$ /product/share?uri=$uri last;
-            }
-
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_redirect off;
+            #proxy_redirect off;
             proxy_next_upstream error;
 
             if ($http_x_forwarded_proto != 'https') {
@@ -78,6 +72,10 @@ http {
 
             # Add HTTP Strict Transport Security for good measure.
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
+
+            if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google.*snippet$") {
+                rewrite ^/type/[a-zA-Z0-9_]*/[a-zA-Z0-9_]*$ /product/share?uri=$uri last;
+            }
         }
 
         # Proxy connections to hapi
