another nginx config update

--- a/nanobox_config/nginx.conf
+++ b/nanobox_config/nginx.conf
@@ -73,7 +73,7 @@ http {
             # Add HTTP Strict Transport Security for good measure.
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
 
-            if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google*snippet$") {
+            if ($http_user_agent ~* "^facebookexternalhit/[0-9]|Facebot|Twitterbot|Pinterest|Google.*snippet.*$") {
                 rewrite ^/type/[a-zA-Z0-9_]*/[a-zA-Z0-9_]*$ /product/share?uri=$uri last;
             }
         }
