--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:dev": "NODE_ENV=development node --require dotenv/config server/start.js",
     "start:local": "NODE_ENV=development IS_LOCAL=true node --require dotenv/config server/start.js",
     "build": "node build/build.js",
-    "e2e": "node test/client/e2e/runner.js",
+    "test:e2e": "node test/client/e2e/runner.js",
     "test:client": "npm run unit && npm run e2e",
     "test:server": "NODE_ENV=test lab -a code -v --leaks test/server",
     "test2": "NODE_ENV=test npm run test:client && npm run test:server",
@@ -124,10 +124,15 @@
     "code": "4.0.0",
     "cross-env": "3.1.4",
     "cross-spawn": "5.0.1",
+    "eslint-plugin-mocha": "^4.11.0",
     "eventsource-polyfill": "0.9.6",
     "friendly-errors-webpack-plugin": "1.1.3",
     "lab": "13.0.2",
     "promise-polyfill": "6.0.2",
+    "wdio-mocha-framework": "^0.5.12",
+    "wdio-sauce-service": "^0.4.6",
+    "wdio-spec-reporter": "^0.1.3",
+    "webdriverio": "^4.9.11",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0"
   },
