--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ cache:
   directories:
     - node_modules
 
-addons:
-  sauce_connect: true
+#addons:
+#  sauce_connect: true
 
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
