--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ cache:
   directories:
     - node_modules
 
-#addons:
-#  sauce_connect: true
+addons:
+  sauce_connect:
+    username: $SAUCE_USERNAME
+    access_key: $SAUCE_ACCESS_KEY
 
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
@@ -84,6 +86,14 @@ install:
   # MAILGUN_DOMAIN_PROD
   - nanobox evar add local MAILGUN_DOMAIN_PROD=$MAILGUN_DOMAIN_PROD
   - nanobox evar add MAILGUN_DOMAIN_PROD=$MAILGUN_DOMAIN_PROD
+
+  # SAUCE_USERNAME
+  - nanobox evar add local SAUCE_USERNAME=$SAUCE_USERNAME
+  - nanobox evar add SAUCE_USERNAME=$SAUCE_USERNAME
+
+  # SAUCE_ACCESS_KEY
+  - nanobox evar add local SAUCE_ACCESS_KEY=$SAUCE_ACCESS_KEY
+  - nanobox evar add SAUCE_ACCESS_KEY=$SAUCE_ACCESS_KEY
 
   # SHIPENGINE_API_KEY_PROD
   - nanobox evar add local SHIPENGINE_API_KEY_PROD=$SHIPENGINE_API_KEY_PROD
