--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ cache:
   directories:
     - node_modules
 
-addons:
-  sauce_connect:
-    username: $SAUCE_USERNAME
-    access_key: $SAUCE_ACCESS_KEY
+#addons:
+#  sauce_connect:
+#    username: $SAUCE_USERNAME
+#    access_key: $SAUCE_ACCESS_KEY
 
 install:
   - sudo bash -c "$(curl -fsSL https://s3.amazonaws.com/tools.nanobox.io/bootstrap/ci.sh)"
