--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,8 @@ install:
   - nanobox evar add local BRAINTREE_PUBLIC_KEY=$BRAINTREE_PUBLIC_KEY
   - nanobox evar add BRAINTREE_PUBLIC_KEY=$BRAINTREE_PUBLIC_KEY
 
-  # BUG_SNAG_API_KEY (production only)
+  # BUG_SNAG_API_KEY
+  - nanobox evar add local BUG_SNAG_API_KEY=$BUG_SNAG_API_KEY
   - nanobox evar add BUG_SNAG_API_KEY=$BUG_SNAG_API_KEY
 
   # CART_TOKEN_SECRET
