--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "boom": "7.1.1",
     "braintree": "2.4.0",
     "braintree-web": "3.26.0",
+    "bugsnag": "^2.1.2",
     "bugsnag-js": "^4.1.2",
     "bugsnag-vue": "^1.0.1",
     "bulma": "0.3.2",
