--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "accounting": "0.4.1",
     "animate.css": "3.5.2",
+    "auth0-js": "^9.1.0",
     "axios": "0.17.1",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -77,7 +78,7 @@
     "inert": "4.2.0",
     "inject-loader": "2.0.1",
     "joi": "13.0.2",
-    "jsonwebtoken": "7.4.0",
+    "jsonwebtoken": "^8.1.0",
     "knex": "0.13.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.foreach": "4.5.0",
