--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "vue": "2.5.8",
     "vue-carousel": "0.6.5",
     "vue-i18n": "7.3.1",
+    "vue-json-tree-view": "^2.1.3",
     "vue-loader": "13.5.0",
     "vue-meta": "^1.4.2",
     "vue-router": "3.0.1",
