--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "vue-social-sharing": "2.3.3",
     "vue-style-loader": "3.0.3",
     "vue-template-compiler": "2.5.8",
+    "vue-youtube-embed": "^2.1.3",
     "vuelidate": "^0.6.1",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
