--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "extract-text-webpack-plugin": "2.0.0",
     "faker": "3.1.0",
     "file-loader": "0.10.0",
+    "file-type": "^7.6.0",
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
     "handlebars": "4.0.10",
