--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ hs_err_pid*
 # Logs:
 *.log
 npm-debug.log*
+logs-dev/
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
