--- a/package.json
+++ b/package.json
@@ -101,9 +101,10 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.3",
     "semver": "5.3.0",
+    "sharp": "^0.19.0",
     "url-loader": "0.5.7",
     "uuid": "3.0.1",
-    "v-img": "0.1.9",
+    "v-img": "^0.2.0",
     "vision": "4.1.1",
     "vue": "2.5.8",
     "vue-carousel": "0.6.5",
