--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "font-awesome": "4.7.0",
     "glue": "4.1.0",
     "handlebars": "4.0.10",
-    "hapi": "^16.6.2",
+    "hapi": "^16.6.3",
+    "hapi-auth-jwt": "^4.0.0",
     "hapi-auth-jwt2": "7.2.4",
-    "hapi-bookshelf-models": "2.0.0",
     "hoek": "5.0.2",
     "html-webpack-plugin": "2.28.0",
     "inert": "4.2.0",
