--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "html-webpack-plugin": "2.28.0",
     "inert": "4.2.0",
     "inject-loader": "2.0.1",
-    "joi": "13.0.2",
+    "joi": "^13.1.2",
     "jsonwebtoken": "^8.1.0",
     "knex": "0.13.0",
     "lodash.clonedeep": "4.5.0",
