--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "accounting": "0.4.1",
     "animate.css": "3.5.2",
     "auth0-js": "^9.3.3",
+    "aws-sdk": "^2.211.0",
     "axios": "0.17.1",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
