--- a/boxfile.yml
+++ b/boxfile.yml
@@ -25,12 +25,13 @@ data.db:
   image: nanobox/postgresql:9.6
 
 # add a web component and give it a "start" command
-web.site:
+web.main:
+  writable_dirs:
+    - tmp
   start:
     nginx: nginx -c /app/nanobox_config/nginx.conf
     node: npm 
-  writable_dirs:
-    - tmp
+
 
 # add a worker component and give it a "start" command
 # worker.main:
