updating travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,32 @@ install:
   - nanobox evar add local CART_TOKEN_SECRET=$CART_TOKEN_SECRET
   - nanobox evar add CART_TOKEN_SECRET=$CART_TOKEN_SECRET
 
+  # DIGITAL_OCEAN_SPACES_ACCESS_KEY
+  - nanobox evar add local DIGITAL_OCEAN_SPACES_ACCESS_KEY=$DIGITAL_OCEAN_SPACES_ACCESS_KEY
+  - nanobox evar add DIGITAL_OCEAN_SPACES_ACCESS_KEY=$DIGITAL_OCEAN_SPACES_ACCESS_KEY
+
+  # DIGITAL_OCEAN_SPACES_SECRET
+  - nanobox evar add local DIGITAL_OCEAN_SPACES_SECRET=$DIGITAL_OCEAN_SPACES_SECRET
+  - nanobox evar add DIGITAL_OCEAN_SPACES_SECRET=$DIGITAL_OCEAN_SPACES_SECRET
+
+  # DIGITAL_OCEAN_SPACES_ENDPOINT
+  - nanobox evar add local DIGITAL_OCEAN_SPACES_ENDPOINT=$DIGITAL_OCEAN_SPACES_ENDPOINT
+  - nanobox evar add DIGITAL_OCEAN_SPACES_ENDPOINT=$DIGITAL_OCEAN_SPACES_ENDPOINT
+  
+  # DIGITAL_OCEAN_SPACE_NAME
+  - nanobox evar add local DIGITAL_OCEAN_SPACE_NAME=$DIGITAL_OCEAN_SPACE_NAME
+  - nanobox evar add DIGITAL_OCEAN_SPACE_NAME=$DIGITAL_OCEAN_SPACE_NAME
+
+
+
+
+
+
+
+
+
+
+
   # EMAIL_FROM_CART_SUCCESS
   - nanobox evar add local EMAIL_FROM_CART_SUCCESS=$EMAIL_FROM_CART_SUCCESS
   - nanobox evar add EMAIL_FROM_CART_SUCCESS=$EMAIL_FROM_CART_SUCCESS
